rasn-compiler-tests/tests/snapshots/structured_types__anonymous_set_of_item_in_choice_option.snap
---
source: rasn-compiler-tests/tests/structured_types.rs
description: "\n    Ticket ::= CHOICE {\n        age-set\t\tSET (SIZE (1..4)) OF INTEGER (1..5)\n    }\n    "
---
Generated:
# [allow (non_camel_case_types , non_snake_case , non_upper_case_globals , unused , clippy :: too_many_arguments ,)] pub mod test_module { extern crate alloc ; use core :: borrow :: Borrow ; use std :: sync :: LazyLock ; use rasn :: prelude :: * ; # [doc = " Anonymous SET OF member "] # [derive (AsnType , Debug , Clone , Decode , Encode , PartialEq , Eq , Hash)] # [rasn (delegate , identifier = "INTEGER" , value ("1..=5"))] pub struct AnonymousTicketAgeSet (pub u8) ; # [doc = " Inner type "] # [derive (AsnType , Debug , Clone , Decode , Encode , PartialEq , Eq , Hash)] # [rasn (delegate , size ("1..=4"))] pub struct TicketAgeSet (pub SetOf < AnonymousTicketAgeSet >) ; # [derive (AsnType , Debug , Clone , Decode , Encode , PartialEq , Eq , Hash)] # [rasn (choice)] pub enum Ticket { # [rasn (tag (context , 0) , identifier = "age-set")] age_set (TicketAgeSet) , } }
