rasn-compiler-tests/tests/snapshots/structured_types__automatic_tags_on_choice.snap
---
source: rasn-compiler-tests/tests/structured_types.rs
description: "\n        T ::= CHOICE { a INTEGER, b BOOLEAN, c OCTET STRING }\n    "
---
Generated:
# [allow (non_camel_case_types , non_snake_case , non_upper_case_globals , unused , clippy :: too_many_arguments ,)] pub mod test_module { extern crate alloc ; use core :: borrow :: Borrow ; use std :: sync :: LazyLock ; use rasn :: prelude :: * ; # [derive (AsnType , Debug , Clone , Decode , Encode , PartialEq , Eq , Hash)] # [rasn (choice , automatic_tags)] pub enum T { a (Integer) , b (bool) , c (OctetString) , } }
