rasn-compiler-tests/tests/snapshots/structured_types__automatic_tags_on_tagged_choice.snap
---
source: rasn-compiler-tests/tests/structured_types.rs
description: "\n        T ::= [7] CHOICE { a INTEGER, b BOOLEAN, c OCTET STRING }\n    "
---
Generated:
# [allow (non_camel_case_types , non_snake_case , non_upper_case_globals , unused , clippy :: too_many_arguments ,)] pub mod test_module { extern crate alloc ; use core :: borrow :: Borrow ; use std :: sync :: LazyLock ; use rasn :: prelude :: * ; # [derive (AsnType , Debug , Clone , Decode , Encode , PartialEq , Eq , Hash)] # [rasn (choice , tag (explicit (context , 7)))] pub enum T { # [rasn (tag (context , 0))] a (Integer) , # [rasn (tag (context , 1))] b (bool) , # [rasn (tag (context , 2))] c (OctetString) , } }
