rasn-compiler-tests/tests/snapshots/structured_types__nested_recursion_elsewhere.snap
---
source: rasn-compiler-tests/tests/structured_types.rs
description: "\n        TypeSpecification ::= CHOICE {\n            array\t\t\t[1] IMPLICIT SEQUENCE\n            {\n                elementType\t\t[2] TypeSpecification\n            }\n        }\n\n        GetVariableAccessAttributesResponse ::= SEQUENCE\n        {\n            typeSpecification\t[2] TypeSpecification\n        }\n    "
---
Generated:
# [allow (non_camel_case_types , non_snake_case , non_upper_case_globals , unused , clippy :: too_many_arguments ,)] pub mod test_module { extern crate alloc ; use core :: borrow :: Borrow ; use std :: sync :: LazyLock ; use rasn :: prelude :: * ; # [derive (AsnType , Debug , Clone , Decode , Encode , PartialEq , Eq , Hash)] pub struct GetVariableAccessAttributesResponse { # [rasn (tag (context , 2) , identifier = "typeSpecification")] pub type_specification : TypeSpecification , } impl GetVariableAccessAttributesResponse { pub fn new (type_specification : TypeSpecification) -> Self { Self { type_specification } } } # [doc = " Inner type "] # [derive (AsnType , Debug , Clone , Decode , Encode , PartialEq , Eq , Hash)] pub struct TypeSpecificationArray { # [rasn (tag (context , 2) , identifier = "elementType")] pub element_type : TypeSpecification , } impl TypeSpecificationArray { pub fn new (element_type : TypeSpecification) -> Self { Self { element_type } } } # [derive (AsnType , Debug , Clone , Decode , Encode , PartialEq , Eq , Hash)] # [rasn (choice)] pub enum TypeSpecification { # [rasn (tag (context , 1))] array (Box < TypeSpecificationArray >) , } }
